--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^5.1.3",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "webpack": "4.44.2",
+    "webpack-cli": "^4.5.0"
   }
 }
