--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "01-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sasaafanasienka.github.io/Portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -12,6 +13,8 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,6 +40,7 @@
   },
   "devDependencies": {
     "css-loader": "^5.1.3",
+    "gh-pages": "^3.1.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "webpack": "4.44.2",
