--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "01-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sasaafanasienka.github.io/Portfolio",
+  "homepage": "https://sasaafanasienka.github.io/Portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -13,12 +13,11 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
