--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "swiper": "^9.0.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
